--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 		<br><u><b><font size=7 color=crimson><p>Education</p></font></b></u>
 		<b><font size=4><p>---------Year---------</p></font></b>
 		<hr size="6" color="crimson" width=70%>
-<ul><li><i><font size=3><p>School Leaving Certificate________________________2011</p></font><br></i></li>
-<li><i><font size=3><p>Higher Secondary Education(Science)________________2013</p></font><br></i></li>
-<li><i><font size=3><p>Tribhuwan University(IOST CSIT)____________________2018</p></font><br></i></li></ul>
+<ul><li><i><font size=3><p>School Leaving Certificate________________2011</p></font><br></i></li>
+<li><i><font size=3><p>Higher Secondary Education(Science)__________2013</p></font><br></i></li>
+<li><i><font size=3><p>Tribhuwan University(IOST CSIT)______________2018</p></font><br></i></li></ul>
                    <a href="#">Download CV</a>
                 </div>
             </div>
