--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 		<br><u><b><font size=7 color=crimson><p>Education</p></font></b></u>
 		<b><font size=4><p>---------Year---------</p></font></b>
 		<hr size="6" color="crimson" width=70%>
-			<ul><li><i><font size=3>School Leaving Certificate__________________2011</font><br></i></li><br>
-				<li><i><font size=3>Higher Secondary Education(Science)__________2013</font><br></i></li><br>
-				<li><i><font size=3>Tribhuwan University(IOST CSIT)______________2018</font><br></i></li></ul>
+			<ul><li><i><font size=3>School Leaving Certificate___________________2011</font><br></i></li><br>
+				<li><i><font size=3>Higher Secondary Education(Science)___________2013</font><br></i></li><br>
+				<li><i><font size=3>Tribhuwan University(IOST CSIT)________________2018</font><br></i></li></ul>
                    <a href="#">Download CV</a>
                 </div>
             </div>
