--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
-                <li><a href="#services" class="menu-btn">Services</a></li>
+		    <li><a href="#services" class="menu-btn">Services</a></li>
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
                 <li><a href="#teams" class="menu-btn">Teams</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
@@ -275,7 +275,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>@2022 Rakesh Dangaura. All rights reserved.<br>
+        <span>&copy;2022 Rakesh Dangaura. All rights reserved.<br>
         <a href="https://www.facebook.com/rakesh.dangaura.9"><img src="images/fb.png" width=25px heigh=25px</a>Facebook      
 	<a href="https://www.instagram.com/rakschaudhary143">Instagram<img src="images/ins.png" width=25px heigh=25px</a></span>
 	<br><font color="white"> Thank You for Visit</font>
