--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Rakesh and I'm a <span class="typing-2"></span></div>
-                    <p>I’ve created over a dozen websites and software designed for commercial purpose, to provide knowledge in field of education and marketing activities for busy professionals also for company. Now I'm working as Government Employee of Nepal, Civil Servant as a Computer Operator.</p>
+                    <p>I’ve created over a dozen websites and software designed for commercial purpose, to provide knowledge in field of education and marketing activities for busy professionals also for company. Now I'm working as Government Employee of Nepal Civil Service.</p>
 		<br><u><b><font size=7 color=crimson><p>Education</p></font></b></u>
 		<b><font size=4><p>---------Year---------</p></font></b>
 		<hr size="6" color="crimson" width=70%>
