--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
     <footer>
         <span>&copy;2022 Rakesh Dangaura. All rights reserved.<br>
         <a href="https://www.facebook.com/rakesh.dangaura.9"><img src="images/fb.png" width=25px heigh=25px</a>      
-	<a href="https://www.instagram.com/rakschaudhary143">Instagram<img src="images/ins.png" width=25px heigh=25px</a></span>
+	<a href="https://www.instagram.com/rakschaudhary143"><img src="images/ins.png" width=25px heigh=25px</a></span>
 	<br><font color="white"> Thank You for Visit</font>
     </footer>
 
