--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <div class="text">I'm Rakesh and I'm a <span class="typing-2"></span></div>
                     <p>I’ve created over a dozen websites and software designed for commercial purpose, to provide knowledge in field of education and marketing activities for busy professionals also for company. Now I'm working as Government Employee of Nepal Civil Service.</p>
 		<br><u><b><font size=7 color=crimson><p>Education</p></font></b></u>
-		<b><font size=4><p>---------Year---------</p></font></b>
+		<b><font size=4><p>---------Board/Level---------</p></font></b>
 		<hr size="6" color="crimson" width=70%>
 			<ul><li><i><font size=3>School Leaving Certificate___________________SLC Board</font><br></i></li><br>
 				<li><i><font size=3>Higher Secondary Education(Science)___________HSEB Board</font><br></i></li><br>
